--- a/main.css
+++ b/main.css
@@ -12,6 +12,42 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	height: 100vh;
+}
+#list {
+	margin: 2% auto;
+	width: 100%;
+}
+#button {
+	display: flex;
+}
+
+.unlist {
+	list-style-type: none;
+	display: block;
+	margin: 0;
+	padding: 0;
+}
+
+.olist {
+	display: flex;
+	padding: 4%;
+	font-size: 1rem;
+}
+
+.holder {
+	background-color: #17a2b8;
+	padding: 2px;
+}
+
+.init-logo {
+	margin-top: 27rem;
+}
+
+#background {
+	background-color: #17a2b8;
+	width: 120px;
+	height: 120px;
 }
 
 #nav-container {
@@ -27,6 +63,32 @@ body {
 	background: #2f3241;
 }
 
+.section {
+	border-left: 5px solid #7e8aa5;
+	padding-left: .5rem;
+	margin-bottom: 3rem;
+}
+
+.section:hover {
+	border-left: 5px solid #28a745;
+	transition: .7s;
+}
+
+.section p {
+	margin: 1%;
+}
+
+.icon-list {
+	list-style: none;
+	display: flex;
+}
+
+.icons-box {
+	width: 2rem;
+	height: 2rem;
+	background: #17a2b8;
+}
+
 #right {
 	margin-right: auto;
 }
@@ -37,6 +99,64 @@ body {
 
 #border {
 	border-bottom: grey;
+}
+
+.list {
+	width: 100%;
+	height: 100%;
+}
+
+.mop {
+	margin: 0;
+}
+
+/*.last-part {
+	display: flex;
+	flex-direction: column;
+}*/
+
+#end-part {
+	height: 90px;
+	margin-top: 35rem;
+	border-left: 5px solid #7e8aa5;
+}
+
+#end-part:hover {
+	border-left: 4px solid #28a745;
+	transition: .7s;
+}
+
+.nav-ul {
+	list-style: none;
+}
+
+.middle-coulmn {
+	height: 100vh;
+}
+.icons-holder {
+	width: 1.05rem;
+	height: 1.05rem;
+	padding: .1rem;
+	border-radius: 2px;
+	position: absolute;
+	display: flex;
+	left: 0;
+	align-items: center;
+	justify-content: center;
+	background: #24bfd7;
+}
+
+.link-1 {
+	font-size: 20px;
+	display: flex;
+}
+
+.abc {
+	/*display: flex;*/
+}
+
+.end {
+	margin-bottom: auto;
 }
 
 .logo-box {
@@ -103,7 +223,9 @@ h4 {
 }
 
 .github-holder {
-	height: 120px;
+	border: 1px #64677d;
+	width: 20vw;
+	margin-left: 2%;
 }
 
 .tag-link {
@@ -163,6 +285,7 @@ h4 {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	overflow: auto;
 }
 
 .content {
@@ -190,8 +313,8 @@ h4 {
 	align-content: space-between;
 }
 
-.sidebar {
+/*.sidebar {
 	width: 5px;
 	height: 20vh;
-	background-color: #7e8aa5;
-}
+	background-color:
+}*/
