--- a/main.css
+++ b/main.css
@@ -1,14 +1,17 @@
-*,
-body::after::before {
+*::after::before {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	height: 100vh;
+}
+
+body {
+	width: 100%;
+	height: 100%;
 }
 
 .page-container {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	display: flex;
 	background-color: #282a36;
 }
@@ -37,6 +40,11 @@ body::after::before {
 	margin-left: -14%;
 	display: flex;
 	flex-direction: column;
+}
+
+.sections {
+	overflow: auto;
+	height: 100vh;
 }
 
 .icons-list {
@@ -171,6 +179,10 @@ h4 {
 	text-decoration: none;
 	color: #50f268;
 	transition: .7s;
+}
+
+#local-text {
+	overflow: auto;
 }
 
 #local-text > p {
